--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <img class="music-imagem" src="imgs/setor.jpg" alt="foto da música VAPO NO SETOR">
                 <h3 class="music-nome">VAPO NO SETOR</h3>
                 <a href="https://youtu.be/997Md4VggDs?si=zNkBTufn4cZe8q81" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
-                <a href="VAPO NO SETOR.mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
+                <a href="/audios/VAPO NO SETOR.mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
                 <a href="https://www.instagram.com/djanxvarr/" target="_blank"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
             </div>
 
@@ -75,8 +75,8 @@
                 <img class="music-imagem" src="imgs/honey pie.jpg" alt="foto da JAWNY - Honeypie Animation MV (Full Version by SeanWay Studio) #animation ‪@JAWNY‬">
                 <h3 class="music-nome">JAWNY - Honeypie Animation MV (Full Version by SeanWay Studio) #animation ‪@JAWNY‬</h3>
                 <a href="https://youtu.be/mcYLzu_1cNc?si=Rcb2hWufDSxt2LeM" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
+                <a href="/audios/JAWNY - Honeypie Animation MV (Full Version by SeanWay Studio) #animation @JAWNY.mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
                 <a href="https://www.instagram.com/seanway_studio/" target="_blank"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
-                <a href="JAWNY - Honeypie Animation MV (Full Version by SeanWay Studio) #animation @JAWNY.mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
             </div>
 
 
@@ -85,7 +85,7 @@
                 <img class="music-imagem" src="imgs/my ordinary life.jpg" alt="foto da The Living Tombstone - My Ordinary Life (Lyrics/Vietsub)">
                 <h3 class="music-nome">The Living Tombstone - My Ordinary Life (Lyrics/Vietsub)</h3>
                 <a href="https://youtu.be/H_6JU6vJMS0?si=LeWXD1IcIOlGCDYK" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a> 
-                <a href="The Living Tombstone - My Ordinary Life (Lyrics⧸Vietsub).mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
+                <a href="/audios/The Living Tombstone - My Ordinary Life (Lyrics⧸Vietsub).mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
             </div>
 
 
@@ -94,7 +94,7 @@
                 <img class="music-imagem" src="imgs/life.jpg" alt="foto da Street Corner Renaissance - Life Could Be A Dream">
                 <h3 class="music-nome">Street Corner Renaissance - Life Could Be A Dream</h3>
                 <a href="https://youtu.be/n-miJQUD9l4?si=LbGlfyEpFVRop-Jk" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>               
-                <a href="Street Corner Renaissance - Life Could Be A Dream.mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
+                <a href="/audios/Street Corner Renaissance - Life Could Be A Dream.mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
             </div>
 
 
@@ -103,8 +103,8 @@
                 <img class="music-imagem" src="imgs/mett.jpg" alt="foto da MEET THE FROWNIES x LOVELY BASTARDS [TIKTOK REMIX SLOWED]">
                 <h3 class="music-nome">MEET THE FROWNIES x LOVELY BASTARDS [TIKTOK REMIX SLOWED]</h3>
                 <a href="https://youtu.be/5UtVzb8ZkmY?si=C3HfAPcmPqdN6up6" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
+                <a href="/audios/MEET THE FROWNIES x LOVELY BASTARDS [TIKTOK REMIX SLOWED].mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
                 <a href="https://www.instagram.com/ikalcetoo/" target="_blank"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
-                <a href="MEET THE FROWNIES x LOVELY BASTARDS [TIKTOK REMIX SLOWED].mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
             </div>
 
 
@@ -113,8 +113,8 @@
                 <img class="music-imagem" src="imgs/spook.jpg" alt="foto da fennecxx, DJ ALEX - SPOOKY (Official Music)">
                 <h3 class="music-nome">fennecxx, DJ ALEX - SPOOKY (Official Music)</h3>
                 <a href="https://youtu.be/Yw2g6_uySOA?si=FBEVOF_9otNegvXh" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
+                <a href="/audios/fennecxx, DJ ALEX - SPOOKY (Official Music).mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
                 <a href="https://www.instagram.com/fennecxx" target="_blank"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
-                <a href="fennecxx, DJ ALEX - SPOOKY (Official Music).mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
             </div>
 
 
@@ -123,7 +123,7 @@
                 <img class="music-imagem" src="imgs/ZN FODÁSTICA 2 - TIKTOK VERSION.jpg" alt="foto da ZN FODÁSTICA 2 - TIKTOK VERSION">
                 <h3 class="music-nome">ZN FODÁSTICA 2 - TIKTOK VERSION</h3>
                 <a href="https://youtu.be/DhbNBA4gBM0?si=jqbJ7cENulqAdGC1" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>        
-                <a href="ZN FODÁSTICA 2 - TIKTOK VERSION.mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
+                <a href="/audios/ZN FODÁSTICA 2 - TIKTOK VERSION.mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
             </div>
 
 
@@ -132,8 +132,8 @@
                 <img class="music-imagem" src="imgs/cafuné.jpg" alt="foto da Cafuné - Tek It [Official Audio]">
                 <h3 class="music-nome">Cafuné - Tek It [Official Audio]</h3>
                 <a href="https://youtu.be/T1EJZsaqevU?si=mEvSV-4DL-jH68sd" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
+                <a href="/audios/Cafuné - Tek It [Official Audio].mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
                 <a href="https://www.instagram.com/wearecafune" target="_blank"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
-                <a href="Cafuné - Tek It [Official Audio].mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
             </div>
     
 
