--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-logo" src="imgs/test2.png" alt="logo the best music">
-        <img class="cabecalho-imagem" src="imgs/logo_size_invert.jpg" alt="logo the best music">
+        <img class="cabecalho-logo" src="img/test2.png" alt="logo the best music">
+        <img class="cabecalho-imagem" src="img/logo_size_invert.jpg" alt="logo the best music">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">BEST</li>
             <li class="cabecalho-lista-item">MUSIC</li>
@@ -34,9 +34,9 @@
         <div class="music-div">
             <img class="music-imagem" src="img/hqdefault.jpg" alt="foto da música SWEET DREAMS">
             <h3 class="music-nome">SWEET DREAMS</h3>
-            <a href="https://youtu.be/bG9z-atG7gc?si=k0bz2zyGHvN8bduM" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
-            <a href="/audios/Eurythmics - Sweet Dreams (Lyrics).mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
-            <a href="https://www.instagram.com/7cloudsdaily/#" target="_blank"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
+            <a href="https://youtu.be/bG9z-atG7gc?si=k0bz2zyGHvN8bduM" target="_blank"><img class="music-icone" src="img/youtube-logo.png" alt="icone youtube"></a>
+            <a href="/audios/Eurythmics - Sweet Dreams (Lyrics).mp3" download><img class="music-icone" src="img/downloads.png" alt="icone download"></a>
+            <a href="https://www.instagram.com/7cloudsdaily/#" target="_blank"><img class="music-icone" src="img/instagram.png" alt="icone instagram"></a>
         </div>
        
 
@@ -44,9 +44,9 @@
             <div class="music-div">
                 <img class="music-imagem" src="img/bye.jpg" alt="foto da música *NSYNC - Bye Bye Bye (Lyrics) (Deadpool 3 Soundtrack)">
                 <h3 class="music-nome">*NSYNC - Bye Bye Bye (Lyrics) (Deadpool 3 Soundtrack)</h3>
-                <a href="https://youtu.be/2ydCvkxuNm4?si=NzF2J1uBR9ockIcE" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
-                <a href="/audios/＊NSYNC - Bye Bye Bye (Lyrics) (Deadpool 3 Soundtrack).mp3 class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
-                <a href="https://www.instagram.com/7cloudsdaily/#" target="_blank"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
+                <a href="https://youtu.be/2ydCvkxuNm4?si=NzF2J1uBR9ockIcE" target="_blank"><img class="music-icone" src="img/youtube-logo.png" alt="icone youtube"></a>
+                <a href="/audios/＊NSYNC - Bye Bye Bye (Lyrics) (Deadpool 3 Soundtrack).mp3 class="music-icone" src="img/downloads.png" alt="icone download"></a>
+                <a href="https://www.instagram.com/7cloudsdaily/#" target="_blank"><img class="music-icone" src="img/instagram.png" alt="icone instagram"></a>
             </div>
 
 
@@ -54,9 +54,9 @@
             <div class="music-div">
                 <img class="music-imagem" src="img/still.jpg" alt="foto da música Elton John - I'm Still Standing (Lyrics)">
                 <h3 class="music-nome">Elton John - I'm Still Standing (Lyrics)</h3>
-                <a href="https://youtu.be/MJ_aPtt4U8M?si=6U8P1LKhYlNnYEee" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
-                <a href="/audios/Elton John - I'm Still Standing (Lyrics).mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
-                <a href="https://www.instagram.com/jvbsucks/" target="_blank"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
+                <a href="https://youtu.be/MJ_aPtt4U8M?si=6U8P1LKhYlNnYEee" target="_blank"><img class="music-icone" src="img/youtube-logo.png" alt="icone youtube"></a>
+                <a href="/audios/Elton John - I'm Still Standing (Lyrics).mp3" download><img class="music-icone" src="img/downloads.png" alt="icone download"></a>
+                <a href="https://www.instagram.com/jvbsucks/" target="_blank"><img class="music-icone" src="img/instagram.png" alt="icone instagram"></a>
             </div>
 
 
@@ -64,9 +64,9 @@
             <div class="music-div">
                 <img class="music-imagem" src="img/setor.jpg" alt="foto da música VAPO NO SETOR">
                 <h3 class="music-nome">VAPO NO SETOR</h3>
-                <a href="https://youtu.be/997Md4VggDs?si=zNkBTufn4cZe8q81" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
-                <a href="/audios/VAPO NO SETOR.mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
-                <a href="https://www.instagram.com/djanxvarr/" target="_blank"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
+                <a href="https://youtu.be/997Md4VggDs?si=zNkBTufn4cZe8q81" target="_blank"><img class="music-icone" src="img/youtube-logo.png" alt="icone youtube"></a>
+                <a href="/audios/VAPO NO SETOR.mp3" download><img class="music-icone" src="img/downloads.png" alt="icone download"></a>
+                <a href="https://www.instagram.com/djanxvarr/" target="_blank"><img class="music-icone" src="img/instagram.png" alt="icone instagram"></a>
             </div>
 
 
@@ -74,9 +74,9 @@
             <div class="music-div">
                 <img class="music-imagem" src="img/honey pie.jpg" alt="foto da JAWNY - Honeypie Animation MV (Full Version by SeanWay Studio) #animation ‪@JAWNY‬">
                 <h3 class="music-nome">JAWNY - Honeypie Animation MV (Full Version by SeanWay Studio) #animation ‪@JAWNY‬</h3>
-                <a href="https://youtu.be/mcYLzu_1cNc?si=Rcb2hWufDSxt2LeM" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>EndrewTwT/laout-2C
-                <a href="/audios/JAWNY - Honeypie Animation MV (Full Version by SeanWay Studio) #animation @JAWNY.mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
-                <a href="https://www.instagram.com/seanway_studio/" target="_blank"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
+                <a href="https://youtu.be/mcYLzu_1cNc?si=Rcb2hWufDSxt2LeM" target="_blank"><img class="music-icone" src="img/youtube-logo.png" alt="icone youtube"></a>EndrewTwT/laout-2C
+                <a href="/audios/JAWNY - Honeypie Animation MV (Full Version by SeanWay Studio) #animation @JAWNY.mp3" download><img class="music-icone" src="img/downloads.png" alt="icone download"></a>
+                <a href="https://www.instagram.com/seanway_studio/" target="_blank"><img class="music-icone" src="img/instagram.png" alt="icone instagram"></a>
             </div>
 
 
@@ -84,8 +84,8 @@
             <div class="music-div">
                 <img class="music-imagem" src="img/my ordinary life.jpg" alt="foto da The Living Tombstone - My Ordinary Life (Lyrics/Vietsub)">
                 <h3 class="music-nome">The Living Tombstone - My Ordinary Life (Lyrics/Vietsub)</h3>
-                <a href="https://youtu.be/H_6JU6vJMS0?si=LeWXD1IcIOlGCDYK" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a> 
-                <a href="/audios/The Living Tombstone - My Ordinary Life (Lyrics⧸Vietsub).mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
+                <a href="https://youtu.be/H_6JU6vJMS0?si=LeWXD1IcIOlGCDYK" target="_blank"><img class="music-icone" src="img/youtube-logo.png" alt="icone youtube"></a> 
+                <a href="/audios/The Living Tombstone - My Ordinary Life (Lyrics⧸Vietsub).mp3" download><img class="music-icone" src="img/downloads.png" alt="icone download"></a>
             </div>
 
 
@@ -93,8 +93,8 @@
             <div class="music-div">
                 <img class="music-imagem" src="img/life.jpg" alt="foto da Street Corner Renaissance - Life Could Be A Dream">
                 <h3 class="music-nome">Street Corner Renaissance - Life Could Be A Dream</h3>
-                <a href="https://youtu.be/n-miJQUD9l4?si=LbGlfyEpFVRop-Jk" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>               
-                <a href="/audios/Street Corner Renaissance - Life Could Be A Dream.mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
+                <a href="https://youtu.be/n-miJQUD9l4?si=LbGlfyEpFVRop-Jk" target="_blank"><img class="music-icone" src="img/youtube-logo.png" alt="icone youtube"></a>               
+                <a href="/audios/Street Corner Renaissance - Life Could Be A Dream.mp3" download><img class="music-icone" src="img/downloads.png" alt="icone download"></a>
             </div>
 
 
@@ -102,9 +102,9 @@
             <div class="music-div">
                 <img class="music-imagem" src="img/mett.jpg" alt="foto da MEET THE FROWNIES x LOVELY BASTARDS [TIKTOK REMIX SLOWED]">
                 <h3 class="music-nome">MEET THE FROWNIES x LOVELY BASTARDS [TIKTOK REMIX SLOWED]</h3>
-                <a href="https://youtu.be/5UtVzb8ZkmY?si=C3HfAPcmPqdN6up6" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
-                <a href="/audios/MEET THE FROWNIES x LOVELY BASTARDS [TIKTOK REMIX SLOWED].mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
-                <a href="https://www.instagram.com/ikalcetoo/" target="_blank"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
+                <a href="https://youtu.be/5UtVzb8ZkmY?si=C3HfAPcmPqdN6up6" target="_blank"><img class="music-icone" src="img/youtube-logo.png" alt="icone youtube"></a>
+                <a href="/audios/MEET THE FROWNIES x LOVELY BASTARDS [TIKTOK REMIX SLOWED].mp3" download><img class="music-icone" src="img/downloads.png" alt="icone download"></a>
+                <a href="https://www.instagram.com/ikalcetoo/" target="_blank"><img class="music-icone" src="img/instagram.png" alt="icone instagram"></a>
             </div>
 
 
@@ -112,9 +112,9 @@
             <div class="music-div">
                 <img class="music-imagem" src="img/spook.jpg" alt="foto da fennecxx, DJ ALEX - SPOOKY (Official Music)">
                 <h3 class="music-nome">fennecxx, DJ ALEX - SPOOKY (Official Music)</h3>
-                <a href="https://youtu.be/Yw2g6_uySOA?si=FBEVOF_9otNegvXh" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
-                <a href="/audios/fennecxx, DJ ALEX - SPOOKY (Official Music).mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
-                <a href="https://www.instagram.com/fennecxx" target="_blank"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
+                <a href="https://youtu.be/Yw2g6_uySOA?si=FBEVOF_9otNegvXh" target="_blank"><img class="music-icone" src="img/youtube-logo.png" alt="icone youtube"></a>
+                <a href="/audios/fennecxx, DJ ALEX - SPOOKY (Official Music).mp3" download><img class="music-icone" src="img/downloads.png" alt="icone download"></a>
+                <a href="https://www.instagram.com/fennecxx" target="_blank"><img class="music-icone" src="img/instagram.png" alt="icone instagram"></a>
             </div>
 
 
@@ -122,8 +122,8 @@
             <div class="music-div">
                 <img class="music-imagem" src="img/ZN FODÁSTICA 2 - TIKTOK VERSION.jpg" alt="foto da ZN FODÁSTICA 2 - TIKTOK VERSION">
                 <h3 class="music-nome">ZN FODÁSTICA 2 - TIKTOK VERSION</h3>
-                <a href="https://youtu.be/DhbNBA4gBM0?si=jqbJ7cENulqAdGC1" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>        
-                <a href="/audios/ZN FODÁSTICA 2 - TIKTOK VERSION.mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
+                <a href="https://youtu.be/DhbNBA4gBM0?si=jqbJ7cENulqAdGC1" target="_blank"><img class="music-icone" src="img/youtube-logo.png" alt="icone youtube"></a>        
+                <a href="/audios/ZN FODÁSTICA 2 - TIKTOK VERSION.mp3" download><img class="music-icone" src="img/downloads.png" alt="icone download"></a>
             </div>
 
 
@@ -131,9 +131,9 @@
             <div class="music-div">
                 <img class="music-imagem" src="img/cafuné.jpg" alt="foto da Cafuné - Tek It [Official Audio]">
                 <h3 class="music-nome">Cafuné - Tek It [Official Audio]</h3>
-                <a href="https://youtu.be/T1EJZsaqevU?si=mEvSV-4DL-jH68sd" target="_blank"><img class="music-icone" src="imgs/youtube-logo.png" alt="icone youtube"></a>
-                <a href="/audios/Cafuné - Tek It [Official Audio].mp3" download><img class="music-icone" src="imgs/downloads.png" alt="icone download"></a>
-                <a href="https://www.instagram.com/wearecafune" target="_blank"><img class="music-icone" src="imgs/instagram.png" alt="icone instagram"></a>
+                <a href="https://youtu.be/T1EJZsaqevU?si=mEvSV-4DL-jH68sd" target="_blank"><img class="music-icone" src="img/youtube-logo.png" alt="icone youtube"></a>
+                <a href="/audios/Cafuné - Tek It [Official Audio].mp3" download><img class="music-icone" src="img/downloads.png" alt="icone download"></a>
+                <a href="https://www.instagram.com/wearecafune" target="_blank"><img class="music-icone" src="img/instagram.png" alt="icone instagram"></a>
             </div>
         </div>
 
@@ -144,8 +144,8 @@
     
     <footer class="rodape">
 
-        <img class="rodape-imagem"src="imgs/youtube-logo.png" alt="youtube">
-        <img class="rodape-imagem"src="imgs/instagram.png" alt="instagram">
+        <img class="rodape-imagem"src="img/youtube-logo.png" alt="youtube">
+        <img class="rodape-imagem"src="img/instagram.png" alt="instagram">
 
     </footer>
 </body>
