--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </div>
        
         <div class="estudante-div">
-            <img class="estudante-imagem" src="img/Lorena.jpg" alt="foto da música ZN FODÁSTICA 2 - TIKTOK VERSION">
+            <img class="estudante-imagem" src="/img/ZN FODÁSTICA 2 - TIKTOK VERSION.jpg" alt="foto da música ZN FODÁSTICA 2 - TIKTOK VERSION">
             <h3 class="estudante-nome">ZN FODÁSTICA 2 - TIKTOK VERSION</h3>
             <a href="https://youtu.be/DhbNBA4gBM0?si=jqbJ7cENulqAdGC1" target="_blank"><img class="estudante-icone" src="/img/youtube-logo.png" alt="icone youtube"></a>
             <a href="/audios/ZN FODÁSTICA 2 - TIKTOK VERSION.mp3" download><img class="estudante-icone" src="/img/downloads.png" alt="icone download"></a>
@@ -95,7 +95,7 @@
         </div>
         
         <div class="estudante-div">
-            <img class="estudante-imagem" src="img/Fernanda Rios.jpg" alt="foto da música MEET THE FROWNIES x LOVELY BASTARDS [TIKTOK REMIX SLOWED]">
+            <img class="estudante-imagem" src="/img/mett.jpg" alt="foto da música MEET THE FROWNIES x LOVELY BASTARDS [TIKTOK REMIX SLOWED]">
             <h3 class="estudante-nome">MEET THE FROWNIES x LOVELY BASTARDS [TIKTOK REMIX SLOWED]</h3>
             <a href="https://youtu.be/5UtVzb8ZkmY?si=C3HfAPcmPqdN6up6" target="_blank"><img class="estudante-icone" src="/img/youtube-logo.png" alt="icone youtube"></a>
             <a href="/audios/MEET THE FROWNIES x LOVELY BASTARDS [TIKTOK REMIX SLOWED].mp3" download><img class="estudante-icone" src="/img/downloads.png" alt="icone download"></a>
